Changelog
=========

1.0 - Unreleased
----------------

* remove collective.quickupload
  [gborelli]

* add wildcard.foldercontents
  [gborelli]

* remove loadcontent profile
  [gborelli]

* overrode temporarily inline_validation.js see.:https://github.com/plone/Products.CMFPlone/pull/56
  [gborelli]

* added test users
  [gborelli]

* check if c.transmogrifier is installed
  [gborelli]

* switch simplemanagement to collective namespace
* added transmogrify.dexterity
* added plone.app.toolbar
* changed profile titles
* changed pipeline to import test content
* added simplemanagement and other dependencies