@@ -4,6 +4,9 @@ Changelog
 1.0 - Unreleased
 ----------------
 
+* fix timezone in calendar leaves
+  [gborelli]
+
 * remove collective.quickupload
   [gborelli]
 
